--- a/.gitignore
+++ b/.gitignore
@@ -76,7 +76,7 @@ target/
 .ipynb_checkpoints/
 
 # do not exclude data from source control by default as used by dvc
-#/data/
+/data/
 
 # Mac OS-specific storage files
 .DS_Store
