--- a/.dvc/config
+++ b/.dvc/config
@@ -1,7 +1,4 @@
 [core]
-    remote = myminio
-['remote "myminio"']
-    url = s3://reh/
-    endpointurl = https://minio.g4challenge.duckdns.org
-['remote "dagshub"']
+    remote = origin
+['remote "origin"']
     url = https://dagshub.com/g4challenge/reh_yolo.dvc
