--- a/.gitignore
+++ b/.gitignore
@@ -78,6 +78,7 @@ target/
 # do not exclude data from source control by default as used by dvc
 /data/*
 !data/*.dvc
+!data/raw/*.dvc
 
 # Mac OS-specific storage files
 .DS_Store
